2003-06-21  Damien McGinnes

	* Mercator/Segment.cpp: added validity flags for points and normals,
          and fixed up a few code alignment probs
	* Mercator/Terrain.h: started to change invalidate. (commented out
          right now)
          Need to modify getSegmentSafe to use the validity flags and only
          create a new segment when one is not already there.

2003-06-19  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h: Add support for legacy interface.

2003-06-19  Al Riddoch  <alriddoch@zepler.org>

	* tests/main.cpp: Move the test prog out of the main code.

	* Mercator/BasePoint.h: Re-work BasePoint class to be more inline
	  with the main style.

	* Mercator/Segment.cpp: Fix up the code to use the new BasePoint
	  style.

2003-06-15 Damien McGinnes

        * new BasePoint.h replaces floats for basepoints
	* Mercator/Segment.cpp : variable roughness implemented
	* added a basic test file - doesnt do much

2003-06-09 Damien McGinnes

	* Mercator/Segment.cpp : modified the normals, this time hopefully so
	  they will work

2003-06-09 Damien McGinnes

	* Mercator/Segment.cpp : modified the normal array to be same size as
	  the heights array. bottom and right boundaries are a bit of a hack
	
2003-06-09 Damien McGinnes

	* Mercator/Segment.cpp : added in an attempt at values for the normal
	  array. Array is one row and column smaller than the height array.
 
2003-06-08  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h, Mercator/Segment.cpp: Tidy up some code,
	  and add the beginnings of the normal calculation code.

2003-06-08  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h, Mercator/Terrain.cpp: Get rid of the passing
	  over extra surrounding basepoints into Segment::populate.

	* Mercator/Segment.h, Mercator/Segment.cpp: No longer require
	  surrounding basepoints when doing qRMD. Add API and stubs for
	  storing an entire array of normals. Segment::populateNormals()