@@ -1,4 +1,5 @@
 #include <Mercator/Segment.h>
+#include <Mercator/Terrain.h>
 #include <Mercator/Matrix.h>
 #include <Mercator/BasePoint.h>
 
@@ -33,6 +34,15 @@ i*/    //for (int i=0; i<=size; ++i) {
             std::cout << std::endl;
     }
 */
+
+    Mercator::Terrain t;
+    t.setBasePoint(0,0,10.0);
+    t.setBasePoint(0,1,12.0);
+    t.setBasePoint(1,0,14.0);
+    t.setBasePoint(1,1,16.0);
+    std::cout << t.getSegmentSafe(0,0,false);
+    t.setBasePoint(1,1,12.0);
+    std::cout << t.getSegmentSafe(0,0,false);
     
     return 0;
 }
